--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -53,23 +53,17 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Byungjin}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Emily}{Liu}{刘知非}
+\position{Software Engineer}
+\address{1601 13th Ave, Apt 309, Seattle WA 98122}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
-% \gitlab{gitlab-id}
-% \stackoverflow{SO-id}{SO-name}
-% \twitter{@twit}
-% \skype{skype-id}
-% \reddit{reddit-id}
-% \extrainfo{extra informations}
+\mobile{626-608-8891}
+\email{zhifei.e.liu@gmail.com}
+\homepage{www.emily-liu.com}
+\github{emilyliuu}
+\linkedin{zfeliu}
 
-\quote{``Be the change that you want to see in the world."}
+\quote{``Act only in accordance with which you can at the same time will that it become a universal law."}
 
 
 %-------------------------------------------------------------------------------
@@ -83,7 +77,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Résumé}
+  {Emily (刘知非) Liu~~~·~~~Résumé}
   {\thepage}
 
 
