--- a/examples/resume/writing.tex
+++ b/examples/resume/writing.tex
@@ -11,10 +11,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {Founder \& Writer} % Role
+    {Student Researcher} % Role
     {A Guide for Developers in Start-up} % Title
-    {Facebook Page} % Location
-    {Jan. 2015 - PRESENT} % Date(s)
+    {Institue for Creative Technologies (ICT)} % Location
+    {Aug. 2015 - May 2016} % Date(s)
     {
       \begin{cvitems} % Description(s)
         \item {Drafted daily news for developers in Korea about IT technologies, issues about start-up.}
