--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,15 +11,9 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
-    }
-
+    {B.S. in Computer Science} % Degree
+    {University of Southern California} % Institution
+    {Los Angeles, CA} % Location
+    {Aug. 2012 - May 2016} % Date(s)
 %---------------------------------------------------------
 \end{cventries}
