--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -63,9 +63,6 @@
 \github{emilyliuu}
 \linkedin{zfeliu}
 
-\quote{``Act only in accordance with which you can at the same time will that it become a universal law."}
-
-
 %-------------------------------------------------------------------------------
 \begin{document}
 
@@ -85,14 +82,10 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{resume/summary.tex}
 \input{resume/experience.tex}
-\input{resume/honors.tex}
-\input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
-\input{resume/education.tex}
 \input{resume/extracurricular.tex}
+\input{resume/education.tex}
+\input{resume/languages.tex}
 
 
 %-------------------------------------------------------------------------------
