--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -11,18 +11,17 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineer} % Job title
-    {Microsoft} % Organization
+    {Software Engineer II} % Job title
+    {Microsoft - Windows QUEST (Quality, Ecosystem, Strategy and Telemetry)} % Organization
     {Redmond, WA} % Location
     {July 2016 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
+        \item {Primary owner of technical engagements with large OEMs (ASUS, Toshiba, Fujitsu)}
+        \item {Onsite reproduction of bugs for fix development, coordinated Feature Team collaboration, achieved highest bug fix rate on the team (50%+)}
+        \item {Developed and delivered partner trainings on API usage and Windows Deployment}
+        \item {Developed and deployed machine learning solution to incoming bug triage}
+        \item {C#, Power BI}
       \end{cvitems}
     }
 
@@ -34,39 +33,36 @@
     {Aug. 2015 - May 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+        \item {Assisted research and development in AI and cognitive science in the realm of VR tutoring programs}
+        \item {Gathered and analyzed large data sets for publication}
+        \item {C++, R}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
     {Software Engineer Intern)} % Job title
-    {Amazon} % Organization
+    {Amazon - AWS Relational Database Systems} % Organization
     {Vancouver, British Columbia, Canada} % Location
     {May - Sept. 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
+        \item {Implemented, tested and deployed new API for RDS command line tools that allows users to modify instance snapshots}
+        \item {Java, JUnit, Oracle SQL and Liquibase, XML, JSON}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+    {Supplementary Instruction Leader/Teaching Assistant} % Job title
+    {Pasadena City College, University of Southern California, Central WA High Schools (TEALS)} % Organization
+    {Los Angeles, CA, Seattle, WA} % Location
+    {Jan. 2015 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+        \item {Planned and led courses for students of wide range of ability: SNAP! for high school students, beginning to intermediate C++ courses, Data Structures, and Intro to Wed Dev for college students}
+        \item {Received Student Leadership Award from PCC school administration}
+        \item {C++, Java, HTML/CSS, SNAP!}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
 \end{cventries}
