--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Projects}
+\cvsection{Publications and Projects}
 
 
 %-------------------------------------------------------------------------------
@@ -11,29 +11,36 @@
 
 %---------------------------------------------------------
   \cventry
-    {Core Member \& President at 2013} % Affiliation/role
-    {PoApper (Developers' Network of POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Jun. 2010 - Jun. 2017} % Date(s)
+    {Learning, Adaptive Support, Student Traits, and Engagement in Scenario-Based Learning} % Affiliation/role
+    {National Training and Simulation Association} % Organization/group
+    {I/ITSEC 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Reformed the society focusing on software engineering and building network on and off campus.}
-        \item {Proposed various marketing and network activities to raise awareness.}
+        \item {Research into the efficacy of VR/video game-like tutoring systems. (bit.ly/2rwwBlA)}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Member} % Affiliation/role
-    {PLUS (Laboratory for UNIX Security in POSTECH)} % Organization/group
-    {Pohang, S.Korea} % Location
-    {Sep. 2010 - Oct. 2011} % Date(s)
+    {Proteus (Apache DRAT)} % Affiliation/role
+    {Apache Opensource} % Organization/group
+    {Fall 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
-        \item {Gained expertise in hacking \& security areas, especially about internal of operating system based on UNIX and several exploit techniques.}
-        \item {Participated on several hacking competition and won a good award.}
-        \item {Conducted periodic security checks on overall IT system as a member of POSTECH CERT.}
-        \item {Conducted penetration testing commissioned by national agency and corporation.}
+        \item {Developed a GUI wrapper for Apache DRAT that allows for more intuitive use. The tool helps audit opensource projects for legally allowable use.}
+        \item {D3.js, Java Spring!, various Apache projects}
+      \end{cvitems}
+    }
+
+%---------------------------------------------------------
+  \cventry
+    {Cofounder} % Affiliation/role
+    {Abilifind} % Organization/group
+    {Fall 2014 - Spring 2015} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+        \item {Realizing the limited resources for people living with disabilities, lead frontend and design for a Yelp-esque review site specifically for accessibilty-based reviews.}
+        \item {Java Spring, Foundation, HTML/CSS/JS}
       \end{cvitems}
     }
 
