--- a/examples/resume/languages.tex
+++ b/examples/resume/languages.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Summary}
+\cvsection{Languages}
 
 
 %-------------------------------------------------------------------------------
@@ -10,5 +10,6 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Software Architect at start-up company Omnious. 7+ years experience specializing in the backend development, infrastructure automation, and computer hacking/security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+C++, Java, C#, Python, HTML/CSS/JS; English, Mandarin Chinese
 \end{cvparagraph}
+o
