--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -53,13 +53,12 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Emily}{Liu}{刘知非}
+\name{Emily}{Liu}
 \position{Software Engineer}
 \address{1601 13th Ave, Apt 309, Seattle WA 98122}
 
 \mobile{626-608-8891}
 \email{zhifei.e.liu@gmail.com}
-\homepage{www.emily-liu.com}
 \github{emilyliuu}
 \linkedin{zfeliu}
 
@@ -74,7 +73,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Emily (刘知非) Liu~~~·~~~Résumé}
+  {Emily Liu~~~·~~~Résumé}
   {\thepage}
 
 
