--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -14,7 +14,10 @@
     {B.S. in Computer Science} % Degree
     {University of Southern California} % Institution
     {Los Angeles, CA} % Location
-    {Aug. 2012 - May 2016} % Date(s)
+    {Aug. 2014 - May 2016} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of experience/contributions/knowledge
+      \end{cvitems}
+    }
 %---------------------------------------------------------
-
 \end{cventries}
