--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -18,13 +18,13 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Primary owner of technical engagements with large OEMs (ASUS, Toshiba, Fujitsu)}
-        \item {Onsite reproduction of bugs for fix development, coordinated Feature Team collaboration, achieved highest bug fix rate on the team (50%+)}
+        \item {Onsite reproduction of bugs for fix development, coordinated Feature Team collaboration, achieved highest bug fix rate on the team (50\%+)}
         \item {Developed and delivered partner trainings on API usage and Windows Deployment}
         \item {Developed and deployed machine learning solution to incoming bug triage}
-        \item {C#, Power BI}
+        \item {C\#, Power BI}
       \end{cvitems}
     }
-
+    \linebreak
 %---------------------------------------------------------
   \cventry
     {Student Researcher} % Job title
@@ -38,12 +38,13 @@
         \item {C++, R}
       \end{cvitems}
     }
-
+    \linebreak
+    
 %---------------------------------------------------------
   \cventry
     {Software Engineer Intern)} % Job title
     {Amazon - AWS Relational Database Systems} % Organization
-    {Vancouver, British Columbia, Canada} % Location
+    {Vancouver, BC, Canada} % Location
     {May - Sept. 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
@@ -51,12 +52,12 @@
         \item {Java, JUnit, Oracle SQL and Liquibase, XML, JSON}
       \end{cvitems}
     }
-
+    \linebreak
 %---------------------------------------------------------
   \cventry
     {Supplementary Instruction Leader/Teaching Assistant} % Job title
     {Pasadena City College, University of Southern California, Central WA High Schools (TEALS)} % Organization
-    {Los Angeles, CA, Seattle, WA} % Location
+    {Los Angeles, CA; Seattle, WA} % Location
     {Jan. 2015 - PRESENT} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
@@ -65,4 +66,5 @@
         \item {C++, Java, HTML/CSS, SNAP!}
       \end{cvitems}
     }
+  %---------------------------------------------------------
 \end{cventries}
