--- a/examples/resume/extracurricular.tex
+++ b/examples/resume/extracurricular.tex
@@ -13,29 +13,33 @@
   \cventry
     {Learning, Adaptive Support, Student Traits, and Engagement in Scenario-Based Learning} % Affiliation/role
     {National Training and Simulation Association} % Organization/group
+    {}
     {I/ITSEC 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {Research into the efficacy of VR/video game-like tutoring systems. (bit.ly/2rwwBlA)}
       \end{cvitems}
     }
-
 %---------------------------------------------------------
   \cventry
     {Proteus (Apache DRAT)} % Affiliation/role
     {Apache Opensource} % Organization/group
+    {}
     {Fall 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {Developed a GUI wrapper for Apache DRAT that allows for more intuitive use. The tool helps audit opensource projects for legally allowable use.}
-        \item {D3.js, Java Spring!, various Apache projects}
+        \item {D3.js, Java Spring, various Apache projects}
       \end{cvitems}
     }
-
+    \linebreak
+    \linebreak
+    \linebreak
 %---------------------------------------------------------
   \cventry
     {Cofounder} % Affiliation/role
     {Abilifind} % Organization/group
+    {}
     {Fall 2014 - Spring 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
@@ -43,6 +47,5 @@
         \item {Java Spring, Foundation, HTML/CSS/JS}
       \end{cvitems}
     }
-
 %---------------------------------------------------------
 \end{cventries}
