--- a/examples/resume/languages.tex
+++ b/examples/resume/languages.tex
@@ -8,8 +8,6 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-
 %---------------------------------------------------------
-C++, Java, C#, Python, HTML/CSS/JS; English, Mandarin Chinese
+C++, Java, C\#, Python, HTML/CSS/JS; English, Mandarin Chinese
 \end{cvparagraph}
-o
